@@ -187,6 +187,9 @@ waitingStart "WAITING FOR OPPONENT"
 
 otherGames "OTHER GAMES:"
 
+amuletGameStakesStarted "JOINED AMULET GAME FOR:"
+
+unknownStakes "UNKNOWN"
 
 
 gameList "JOIN GAME:"
