@@ -509,21 +509,29 @@ server.php?action=wait_game_start
 
 Returns:
 started
+dollar_amount
 1.00#5.55#9.00
 OK
 
 or
 waiting
+dollar_amount
 1.00#5.55#9.00
 OK
 
 This call is for game creators who are waiting for an opponent to join
 their game.
 
+dollar_amount is the stake that was requested for this game
+(for an amulet_game, after started is returned, this tells the amulet-holder
+ the random stakes they got matched with---place-holder statkes are returned 
+ while waiting) 
+
 The list of dollar amounts (separated by #) after the status message provides
 notification about other similar game stakes that are waiting for an opponent
 (so that waiting player can see a list of other games).  List will be # if
 empty.
+
 
 
 
